<resources>
    <string name="app_name">LoginTwo</string>
    <string name="welcome">Welcome to LoginTwo!</string>
    <string name="title">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="success">Login success!</string>
    <string name="failure">Login failure!</string>
</resources>